tests/chapter_15/invalid_types/null_ptr_array_initializer.c
int main(void)
{
    int arr[1] = 0;
    return arr[0];
}